[package]
name = "ai-go-commentator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "4.0.1"
screenshots = "0.8.6"
clap = { version = "4.4.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
tts_rust = "0.3.5"
base64 = "0.21.7"
